[tool.poetry]
name = "musepsf"
version = "0.3.1"
description = "Measure the FWHM of MUSE PSF using cross convolution and a reference image"
authors = ["Enrico Congiu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
astropy = ">=5.2"
numpy = "^1.21"
scipy = ">=1.9c"
astroquery = "^0.4.6"
photutils = "^1.6.0"
reproject = ">=0.10.0"
regions = "^0.7"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
python = "^3.9,<3.12"

[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^0.17.1", python = "^3.10"}
sphinx-autoapi = "^2.1.0"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
