[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "musepsf"
version = "0.3.2"
authors = [
  { name="Enrico Congiu", email="econgiu@eso.org" },
]
description = "Measure the FWHM of MUSE PSF using cross convolution and a reference image"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux, MacOS",
]
dependencies = [
    "astropy >=5.2",
    "numpy",
    "scipy >=1.9c",
    "astroquery",
    "photutils >=2.0.2",
    "reproject >=0.10.0",
    "regions",
    "matplotlib",
    "scikit-image",
    "spacepylot @ git+https://github.com/ejwatkins-astro/spacepylot.git",
    "wget"

]

[project.urls]
Homepage = "https://github.com/cloud182/musepsf"
